# Api-coin

./: .gitignore  Makefile  README.md  alembic.ini  main.py  pyproject.toml  run_app.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker.env.example
front-api-coin/: index.html  package-lock.json  package.json  vite.config.js
front-api-coin/src/: App.jsx  index.css
front-api-coin/src/components/: ApiKeysManager.jsx  ApiRequests.jsx  Button.jsx  InputField.jsx  Login.jsx  Register.jsx
front-api-coin/src/hooks/: useAuth.jsx
front-api-coin/src/services/: api.js
front-sandbox/: index.html  package-lock.json  package.json
settings/: dev.env  env.example
src/app/: README.md  __init__.py  __main__.py  celery_app.py  create_app.py  dependencies.py  main.py  router_main.py  schemas.py  tasks.py
src/app/configuration/: __init__.py  auth.py  lifespan.py  rabbitmq_server.py  rate_limiting.py  server.py
src/app/services/: __init__.py  ex_service.py
src/app/static/: index.html
src/core/: DataManager.py  __init__.py
src/core/alembic/: env.py
src/core/database/: __init__.py  base.py  engine.py  models.py
src/core/models/: __init__.py  dataset.py
src/core/settings/: __init__.py  app_config.py  base.py  config.py  dev_config.py  news_parser_settings.py  prod_config.py
src/core/utils/: __init__.py  clear_datasets.py  (+2 more)
src/data/: coins_list.csv
src/handlers/: att_parser.py  parser_handler.py
src/parser_driver/: __init__.py  api.py  device_real.py  web_driver.py
systemd/: api-coin-app.service  api-coin-celery-app.service
(+48 files in other folders)
