[tool.poetry]
name = "api-coin"
version = "0.1.0"
description = "KuCoin API Server"
authors = ["igornet0"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.117.1"}
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.0.0"
aiohttp = "^3.9.0"
python-multipart = "^0.0.18"
requests = "^2.32.5"
pandas = "^2.3.2"
alembic = "^1.16.5"
passlib = "^1.7.4"
prometheus-client = "^0.23.1"
python-jose = "^3.5.0"
bcrypt = "^5.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
